style.css
.d-item {
    font-weight: bold;
}

footer.footer.mt-auto.py-3 {
    background-color: #ccc;
}

div#result {
    min-height: 1px;
    margin-top: 15px;
}

div#main {
    background-color: #fffd;
    /*padding-bottom: 15px;*/
}

body {    
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    text-align: justify;
}

/*ICONS */
.f-check {
    height: 22px;
}

.form-check-label {
    vertical-align: top;
    font-size: large;
}

.icon-fact {
    margin-left: 1em;
    cursor: pointer;
}

.icon-fact:before {
  display: inline-grid;
  content: ' ';
  background-size: 28px 28px;
  height: 28px;
  width: 28px;
}

.icon-DP:before { background-image: url('images/factions/icons/DP.svg'); }
.icon-DW:before { background-image: url('images/factions/icons/DW.svg'); }
.icon-GO:before { background-image: url('images/factions/icons/GO.svg'); }
.icon-KN:before { background-image: url('images/factions/icons/KN.svg'); }
.icon-UD:before { background-image: url('images/factions/icons/UD.svg'); }
.icon-DR:before { background-image: url('images/factions/icons/DR.svg'); }
.icon-GI:before { background-image: url('images/factions/icons/GI.svg'); }
.icon-GN:before { background-image: url('images/factions/icons/GN.svg'); }
.icon-SE:before { background-image: url('images/factions/icons/SE.svg'); }
.icon-TR:before { background-image: url('images/factions/icons/TR.svg'); }
.icon-BA:before { background-image: url('images/factions/icons/BA.svg'); }
.icon-PH:before { background-image: url('images/factions/icons/PH.svg'); }
.icon-UN:before { background-image: url('images/factions/icons/UN.svg'); }
.icon-CY:before { background-image: url('images/factions/icons/CY.svg'); }
.icon-EL:before { background-image: url('images/factions/icons/EL.svg'); }
.icon-EO:before { background-image: url('images/factions/icons/EO.svg'); }
.icon-OR:before { background-image: url('images/factions/icons/OR.svg'); }
.icon-DU:before { background-image: url('images/factions/icons/DU.svg'); }
.icon-SH:before { background-image: url('images/factions/icons/SH.svg'); }
.icon-WI:before { background-image: url('images/factions/icons/WI.svg'); }
.icon-DE:before { background-image: url('images/factions/icons/DE.svg'); }
.icon-GH:before { background-image: url('images/factions/icons/GH.svg'); }
.icon-ME:before { background-image: url('images/factions/icons/ME.svg'); }
.icon-MI:before { background-image: url('images/factions/icons/MI.svg'); }
.icon-VA:before { background-image: url('images/factions/icons/VA.svg'); }
.icon-ZO:before { background-image: url('images/factions/icons/ZO.svg'); }
.icon-WE:before { background-image: url('images/factions/icons/WE.svg'); }
.icon-SD:before { background-image: url('images/factions/icons/SD.svg'); }
.icon-FE:before { background-image: url('images/factions/icons/FE.svg'); }
.icon-DM:before { background-image: url('images/factions/icons/DM.svg'); }
.icon-TC:before { background-image: url('images/factions/icons/TC.svg'); }
.icon-PO:before { background-image: url('images/factions/icons/PO.svg'); }
.icon-FR:before { background-image: url('images/factions/icons/FR.svg'); }
.icon-YE:before { background-image: url('images/factions/icons/YE.svg'); }
.icon-IK:before { background-image: url('images/factions/icons/IK.svg'); }
.icon-IQ:before { background-image: url('images/factions/icons/IQ.svg'); }
.icon-AW:before { background-image: url('images/factions/icons/AW.svg'); }
.icon-SA:before { background-image: url('images/factions/icons/SA.svg'); }



/* STYLES */

body.default {
    background-image: url(images/castle.jpg);    
}
body.claim {
    background-image: url(images/claim.jpg);    
}
.style-icon-claim {
    color: #58a143;   
}

/*DP*/
body.DP {
    background-image: url(images/factions/backgrounds/DP.jpg);    
}
body.DP div#main {
    background-color: #f8f4c5ee;
}
body.DP div#main, body.DP div#main table, body.DP .navbar-light .navbar-nav .nav-link {
    color: #0e5b57;
}
.style-icon-DP {
    color: #b6a816;   
}

/*DW*/
body.DW {
    background-image: url(images/factions/backgrounds/DW.jpg);    
} 
body.DW div#main {
    background-color: #365a58ee;
}
body.DW div#main, body.DW div#main table, body.DW .navbar-light .navbar-nav .nav-link {
    color: #fcdbad;
}
.style-icon-DW {
    color: #365a58;   
}

/*GO*/
body.GO {
    background-image: url(images/factions/backgrounds/GO.jpg);    
}
body.GO div#main {
    background-color: #dec182ee;
}
body.GO div#main, body.GO div#main table, body.GO .navbar-light .navbar-nav .nav-link {
    color: #8f0202;
}
.style-icon-GO {
    color: #dec182;   
}


/*KN*/
body.KN {
    background-image: url(images/factions/backgrounds/KN.jpg);    
}

body.KN div#main {
    background-color: #d8e5b9dd;
}

body.KN div#main, body.KN div#main table, body.KN .navbar-light .navbar-nav .nav-link {
    color: #004d76;
}
.style-icon-KN {
    color: #94b643;   
}



/*UD*/
body.UD {
    background-image: url(images/factions/backgrounds/UD.jpg);    
}
body.UD div#main {
    background-color: #572b66ee;
}
body.UD div#main, body.UD div#main table, body.UD .navbar-light .navbar-nav .nav-link {
    color: #e2d879;
}
.style-icon-UD {
    color: #572b66;   
}

